<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SigetDriver</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Siget Driver</string>
    <string name="title_activity_estado">EstadoActivity</string>
    <string name="title_activity_servicio">ServicioActivity</string>
    <string name="title_activity_voucher">VoucherActivity</string>

    <!-- MIS STRINGS -->
    <string name="SIGET_DRIVER">SIGET DRIVER</string>
    <string name="Usuario">Usuario</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Recordarme">Recordarme</string>
    <string name="RECIBIR_SERVICIOS">RECIBIR SERVICIOS</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="Servicios_pendientes">Servicios pendientes</string>
    <string name="No.">No.</string>
    <string name="Fecha">Fecha</string>
    <string name="Hora">Hora</string>
    <string name="Quedan">Quedan</string>
    <string name="Cerrar_Sesion">Cerrar Sesión</string>
    <string name="Crear_Datos_Prueba">Crear Datos Prueba</string>
    <string name="Crear_Datos_Online">Crear Datos Online</string>
    <string name="ORDEN_SERVICIO">ORDEN SERVICIO</string>
    <string name="LIQUIDACION_ORDEN_SERVICIO">LIQUIDACIÓN ORDEN SERVICIO</string>
    <string name="string_empty"></string>
    <string name="Empresa">Empresa</string>
    <string name="Pasajero">Pasajero</string>
    <string name="Celular">Celular</string>
    <string name="Telefono">Teléfono</string>
    <string name="Tipo_de_Servicio">Tipo Servicio</string>
    <string name="Tipo_de_Pago">Tipo de Pago</string>
    <string name="Observacion">Observación</string>
    <string name="Zona">Zona</string>
    <string name="Direccion">Dirección</string>
    <string name="Ir">IR</string>
    <string name="LLegar">LLEGAR</string>
    <string name="Voucher_Electronico">Voucher Electrónico</string>
    <string name="Centro_de_Costos">Centro Costos</string>
    <string name="Ver_Detalle">Ver Detalle</string>
    <string name="Insertar_Destino">Insertar Destino</string>
    <string name="Cancelar_Servicio">Cancelar Servicio</string>
    <string name="title_activity_insertar_destino">InsertarDestinoActivity</string>
    <string name="INSERTAR_DESTINO">INSERTAR DESTINO</string>
    <string name="GRABAR">Grabar</string>
    <string name="Guardar">Guardar</string>
	<string name="Tiempo_Espera">Tarifa Espera</string>
	<string name="Estacionamiento">Parqueo</string>
	<string name="Peaje">Peaje</string>
	<string name="Otros">Otros</string>
	<string name="Tarifa">Tarifa</string>
	<string name="Total">Total</string>
	<string name="Hora_Servicio">Hora Servicio</string>
	<string name="Hora_Llegada">Hora Llegada</string>
	<string name="Espera">Tiempo de Espera</string>
	<string name="Destino_Final">Destino Final</string>
	<string name="Cancelado_por">Cancelado por:</string>
	<string name="Conductor">Conductor</string>
</resources>
