<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <Switch
        android:id="@+id/swtServicios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:text="@string/RECIBIR_SERVICIOS"
        android:textOff="@string/OFF"
        android:textOn="@string/ON" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:background="#F4FA58"
        android:text="@string/ORDEN_SERVICIO" />

	<ListView
	    android:id="@+id/listPuntos"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" >
	</ListView>
    
</LinearLayout>
