<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtTipoPunto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:text="-"
            android:textSize="20dp"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFinal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:gravity="right"
            android:visibility="invisible"
            android:text="@string/Destino_Final"
            android:textColor="#333"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp" >

            <TextView
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/Zona"
                android:textSize="20dp"
                android:textColor="#000" />

            <ImageView
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/string_empty"
                android:src="@drawable/line_gris" />

            <TextView
                android:id="@+id/txtZona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="-"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp" >

            <TextView
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/Direccion"
                android:textSize="20dp"
                android:textColor="#000" />

            <ImageView
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/string_empty"
                android:src="@drawable/line_gris" />

            <TextView
                android:id="@+id/txtDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="-"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnAccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_weight="0.50"
                android:text="@string/Ir" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
