<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="#F4FA58"
        android:text="DETALLE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Empresa" />

            <ImageView
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/string_empty"
                android:src="@drawable/line_gris" />

            <TextView
                android:id="@+id/txtEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Pasajero" />

            <ImageView
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/string_empty"
                android:src="@drawable/line_gris" />

            <TextView
                android:id="@+id/txtPasajero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Telefono" />

            <ImageView
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/string_empty"
                android:src="@drawable/line_gris" />

            <TextView
                android:id="@+id/txtCelular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Tipo_de_Servicio" />

            <ImageView
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/string_empty"
                android:src="@drawable/line_gris" />

            <TextView
                android:id="@+id/txtTipoServicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Fecha" />

            <ImageView
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/string_empty"
                android:src="@drawable/line_gris" />

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Hora" />

            <ImageView
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/string_empty"
                android:src="@drawable/line_gris" />

            <TextView
                android:id="@+id/txtHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Observacion" />

            <ImageView
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/string_empty"
                android:src="@drawable/line_gris" />

            <TextView
                android:id="@+id/txtObservacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="-" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>